minor fix for jumping menu issue.

--- a/src/sass/framework/_header.scss
+++ b/src/sass/framework/_header.scss
@@ -92,12 +92,18 @@ body.menu-open #mobile-toggle {
 @include media("max",767,0) {
     #header {
         position: fixed; right:0; top: 0; transform:translate(0,-100%);
-        height: 100vh; height:var(--vh);
+        height: 100vh;
+        //height:var(--vh);
         width:100vw;
         background:$xdgrey; overflow:hidden;
         opacity:0; visibility:hidden;
         transition:all .4s ease-in-out;
         @include vw-padding(170,100,100);
+
+        &::after {
+            content:''; position:absolute; top:100%; left:0; right:0; height:100px; background:$xdgrey;
+            display:block; z-index:-1;
+        }
 
         display:flex; flex-direction:column; justify-content:flex-start; align-items:stretch;
         > .logo {
